Fix obstacle and target shifting possibility

--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -1,6 +1,6 @@
 :root {
-  --mapWidth: 525px;
-  --mapHeight: 525px;
+  --mapWidth: 1980px;
+  --mapHeight: 1020px;
 }
 
 #map {
@@ -11,7 +11,6 @@
   flex-wrap: wrap;
   overflow: hidden;
   background: var(--map-color);
-  z-index: -2;
 }
 
 input {
@@ -22,10 +21,12 @@ input {
   position: absolute;
   width: 100%;
   height: 100%;
+  pointer-events: none;
+  z-index: 2
 }
 
+.taget,
 #target {
-  background: white;
   background-image: url("../../../assets/images/flag.svg");
   background-position: cover;
   background-size: 100% 100%;
@@ -34,6 +35,9 @@ input {
   height: 40px;
   width: 40px;
   position: absolute;
+  z-index: 99;
+  cursor: pointer;
+  -webkit-filter: invert(100%);
 }
 
 .robot {
@@ -54,7 +58,8 @@ input {
   width: 25px;
   position: absolute;
   border-radius: 50%;
-  z-index: -1;
+  pointer-events: none;
+  z-index: 1;
 }
 
 .circle {
@@ -67,6 +72,7 @@ input {
   background: var(--anchor-radius-color);
   z-index: -1;
   transition: all ease-in-out 0.2s;
+  pointer-events: none;
 }
 
 .tri {
@@ -107,4 +113,6 @@ input {
   top: 5px;
   left: 5px;
   border: solid rgb(0, 0, 0) 2px;
+  cursor: pointer;
+  z-index: 99;
 }
