--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 :root {
   --header-color: rgba(0, 0, 0, 0.425);
   --anchor-color: #da40dac5;
-  --anchor-radius-color: #7535dc42;
+  --anchor-radius-color: #7535dc88;
   --map-color: rgba(0, 0, 0, 0.521);
   --map-controller-bg-color: var(--map-color);
   --map-controller-color: var(--remote-color);
